--- a/Finimalism11.css
+++ b/Finimalism11.css
@@ -84,10 +84,6 @@ html {
   margin-top: -4em;
 }
 
-.layout-mobile .detailPagePrimaryContainer::before {
-  backdrop-filter: blur(1px);
-}
-
 .detailPageSecondaryContainer {
   position: relative;
   z-index: 1;
@@ -104,10 +100,6 @@ html {
   background-size: cover;
   opacity: 1;
   z-index: -1;
-}
-
-.layout-mobile .detailPagePrimaryContainer::before {
-  backdrop-filter: blur(1px);
 }
 
 .headerTop {
@@ -5588,7 +5580,7 @@ a[href*="shokoanime.com"] {
 .layout-mobile .button-flat.btnPlay.detailButton.emby-button {
   width: 22%;
   height: 2em;
-  background: rgb(var(--tint)) !important;
+  background: rgb(var(--accent)) !important;
   box-shadow: 0px 0px 13px #432b6f7a;
   margin-left: -0.9em !important;
 }
