--- a/Finimalism11.css
+++ b/Finimalism11.css
@@ -1246,10 +1246,16 @@ progress {
 
 .layout-desktop #itemDetailPage .listItemImage.listItemImage-large.itemAction.lazy.non-blurhashable.lazy-image-fadein-fast[data-action="link"],
 .layout-tv #itemDetailPage .listItemImage.listItemImage-large.itemAction.lazy.non-blurhashable.lazy-image-fadein-fast[data-action="link"] {
+  border-radius: var(--rounding) !important;
   border-bottom-left-radius: 0 !important;
   border-bottom-right-radius: 0 !important;
   max-width: 100%;
   width: 100%;
+}
+
+.layout-desktop .itemDetailPage:has(.listItem.listItem-largeImage.listItem-withContentWrapper[data-type="Episode"]) .listItem,
+.layout-tv .itemDetailPage:has(.listItem.listItem-largeImage.listItem-withContentWrapper[data-type="Episode"]) .listItem {
+  padding: 0;
 }
 
 /*hover zoom*/
@@ -2291,7 +2297,7 @@ button[is="paper-icon-button-light"].cardOverlayButton.cardOverlayButton-hover.i
 }
 
 .listItemImage:hover {
-  box-shadow: 0px 0px 350px #2f21488a;
+  box-shadow: 0px 0px 350px rgba(var(--accent), 0.1);
 }
 
 .skinHeader {
@@ -2443,7 +2449,7 @@ button[is="paper-icon-button-light"].cardOverlayButton.cardOverlayButton-hover.i
   backdrop-filter: blur(2px) brightness(81%);
   margin-bottom: 0.5%;
   box-shadow: 0px 0px 2px rgb(0, 0, 0);
-  background: rgb(var(--tint));
+  background: rgba(var(--tint), 0.6);
 }
 
 .layout-desktop #itemDetailPage .listItem,
@@ -2871,7 +2877,13 @@ a[href*="shokoanime.com"] {
   display: -webkit-box !important;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 3;
+  opacity: 0.8;
 }
+
+.layout-desktop .listItem:hover .secondary.listItem-overview.listItemBodyText {
+  opacity: 1 !important;
+}
+
 
 .layout-desktop .itemName.infoText.originalTitle,
 .layout-desktop .itemName.infoText.parentNameLast,
@@ -3705,8 +3717,8 @@ a[href*="shokoanime.com"] {
 
 .layout-desktop #listChildrenCollapsible.verticalSection-extrabottompadding #childrenContent .itemsContainer.padded-right.vertical-list .listItem.listItem-largeImage.listItem-withContentWrapper .listItem-content .listItemBody.itemAction,
 .layout-tv #listChildrenCollapsible.verticalSection-extrabottompadding #childrenContent .itemsContainer.padded-right.vertical-list .listItem.listItem-largeImage.listItem-withContentWrapper .listItem-content .listItemBody.itemAction {
-  width: calc(31vw + -16vh);
-  min-width: calc(31vw + -16vh);
+  width: calc(30.5vw + -16vh);
+  min-width: calc(30.5vw + -16vh);
   background: transparent;
   border-radius: 0;
 }
