--- a/Finimalism11.css
+++ b/Finimalism11.css
@@ -953,8 +953,19 @@ progress {
   gap: 1%;
 }
 
-#homeTab .emby-scroller {
-  padding-left: 1em;
+.layout-desktop #homeTab .emby-scroller,
+.layout-tv #homeTab .emby-scroller {
+  padding-left: max(env(safe-area-inset-left),1.3%);
+}
+
+.layout-desktop .sections.homeSectionsContainer, 
+.layout-tv .sections.homeSectionsContainer {
+  padding-left: max(env(safe-area-inset-left),1.2%);
+}
+
+.layout-desktop #homeTab .sectionTitleContainer-cards,
+.layout-tv #homeTab .sectionTitleContainer-cards {
+  padding-left: 0;
 }
 
 [dir="ltr"] .padded-left {
@@ -3396,10 +3407,6 @@ a[href*="shokoanime.com"] {
 .layout-desktop .detailsGroupItem .content,
 .layout-tv .detailsGroupItem .content {
   text-align: left;
-}
-
-.layout-desktop .sections.homeSectionsContainer,
-.layout-tv .sections.homeSectionsContainer {
 }
 
 .layout-desktop #homeTab .verticalSection.section2.emby-scroller-container,
