--- a/Finimalism11.css
+++ b/Finimalism11.css
@@ -1,3 +1,4 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Geom:ital,wght@0,300..900;1,300..900&display=swap');
 
 :root { 
@@ -2308,6 +2309,15 @@ button[is="paper-icon-button-light"].cardOverlayButton.cardOverlayButton-hover.i
   margin-top: -0.5em;
 }
 
+.layout-desktop .emby-scrollbuttons.padded-right {
+  opacity: 0;
+  transition: opacity 0.3s ease-out 0.5s;
+}
+
+.layout-desktop .emby-scroller-container:hover .emby-scrollbuttons.padded-right {
+  opacity: 1 !important;
+}
+
 .layout-desktop #homeTab .emby-scroller-container {
   position: relative;
   overflow: hidden;
@@ -3528,7 +3538,24 @@ a[href*="shokoanime.com"] {
 .layout-desktop .mainAnimatedPages:has(.button-link.itemAction.emby-button[data-type="Season"]) #scenesCollapsible,
 .layout-tv .mainAnimatedPages:has(.button-link.itemAction.emby-button[data-type="Season"]) #scenesCollapsible {
   left: 40em;
-  max-width: 54vh;
+  color: #fff;
+  max-width: 54vh !important;
+  color: #fff;
+  transition: max-width 0.2s ease-out 1s, background-color 1s ease-out 2s, border-color 0.5s ease-out 2s, padding-left 1s ease-out 1s, padding-right 1s ease-out 1s !important;
+  border-radius: var(--rounding) !important;
+  height: 15em !important;
+}
+
+.layout-desktop .mainAnimatedPages:has(.button-link.itemAction.emby-button[data-type="Season"]) #scenesCollapsible:hover,
+.layout-tv .mainAnimatedPages:has(.button-link.itemAction.emby-button[data-type="Season"]) #scenesCollapsible:focus {
+  max-width: calc(94.5vw - 60vh) !important;
+  background: rgb(var(--tint));
+  border: 0.5px solid;
+  border-color: #fff3;
+  margin-top: -1px;
+  margin-left: -1px;
+  transition: max-width 0.2s ease-out 1s, background-color 1s ease-out 0s, border-color 0.5s ease-out 0s, padding-left 1s ease-out 0.25s, padding-right 1s ease-out 0.25s, height 1s ease-out 0.25s !important;
+  border-radius: var(--rounding);
 }
 
 .layout-desktop #scenesCollapsible,
@@ -4016,8 +4043,14 @@ a[href*="shokoanime.com"] {
 }
 
 @supports (width:max(1px,1px)) {
-  .emby-scroller {
+  #homeTab .emby-scroller {
     padding-right: max(env(safe-area-inset-right),1.3%);
+  }
+}
+
+@supports (width:max(1px,1px)) {
+  .emby-scroller {
+    padding-right: 0;
   }
 }
 
@@ -4592,12 +4625,23 @@ a[href*="shokoanime.com"] {
   left: 40em;
   bottom: unset !important;
   max-width: 54vh !important;
+  color: #fff;
+  transition: max-width 0.2s ease-out 1s, background-color 1s ease-out 2s, border-color 0.5s ease-out 2s, padding-left 1s ease-out 1s, padding-right 1s ease-out 1s !important;
+  border-radius: var(--rounding) !important;
+  height: 18em !important;
 }
 
 
 .layout-desktop .verticalSection.detailVerticalSection.moreFromSeasonSection.emby-scroller-container:hover,
 .layout-tv .verticalSection.detailVerticalSection.moreFromSeasonSection:focus {
-  max-width: calc(93.5vw - 60vh) !important;
+  max-width: calc(94.5vw - 60vh) !important;
+  background: rgb(var(--tint));
+  border: 0.5px solid;
+  border-color: #fff3;
+  margin-top: -1px;
+  margin-left: -1px;
+  transition: max-width 0.2s ease-out 1s, background-color 1s ease-out 0s, border-color 0.5s ease-out 0s, padding-left 1s ease-out 0.25s, padding-right 1s ease-out 0.25s, height 1s ease-out 0.25s !important;
+  border-radius: var(--rounding);
 }
 
 .layout-desktop .infoWrapper,
