--- a/Finimalism11.css
+++ b/Finimalism11.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Geom:ital,wght@0,300..900;1,300..900&display=swap');
 
 :root { 
@@ -252,8 +251,10 @@ h2 {
 .layout-tv .itemDetailPage:has(.detailImageContainer > .card .cardImageIcon.person) p.overview.detail-clamp-text {
   -webkit-line-clamp: unset;
   display: block;
-  overflow: visible;
-  height: unset;
+  overflow: scroll;
+  height: 9em;
+  width: calc(90vw + -54vh);
+  padding-top: 0.4em;
 }
 
 .layout-desktop .itemDetailPage:has(.detailImageContainer > .card .cardImageIcon.person) #listChildrenCollapsible,
